# ComfyUI-CSV-prompt-builder

./: LICENSE.txt  README.md  __init__.py  build_prompt_from_csv.py  pyproject.toml
examples/: example_workflow.json
prompt_sets/: _csv_config.json  cat_hat.csv  example.csv
